fix: add word-wrap to the cards of the board

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,12 +20,11 @@ header {
 .content-container{
   display: flex;
   flex-direction: column;
-  width:100svw;
 
 }
 @media (width > 950px){
   .content-container{
-    width: calc(100% - 195px);
+    width: calc(100% - 232px);
   }
 }
 .content{
